# syscall-lab

./: LICENSE  README.md  cluster  tanium-engineer-lab
cluster/: README.md  USAGE.md  ansible.cfg  check_connectivity.yml  kafka_cluster.yml  mongo_replicas.yml  network_config.yml  redis.yml  setup.yml  setup_kafka_role.sh
cluster/group_vars/: jaguar_cluster.yml
cluster/inventory/: hosts  hosts.example  hosts.ini
cluster/roles/connectivity/tasks/: main.yml
cluster/roles/firewall/handlers/: main.yml
cluster/roles/firewall/tasks/: main.yml
cluster/roles/firewall/vars/: main.yml
cluster/roles/kafka/files/: log4j2.properties
cluster/roles/kafka/handlers/: main.yml
cluster/roles/redis/: README.md
cluster/templates/: ifcfg-static.j2
lab-env/: deploy_logger.sh  docker-compose.yml
lab-env/backend/: Pipfile
lab-env/client/TreePixelDB/: LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
lab-env/logger-ms/: Cargo.toml  Dockerfile  logger-ms
lab-env/logger-ms/src/: main.rs
lab-env/micro_services/: README.md
lab-env/micro_services/django_workers/: Pipfile  pyrightconfig.json
lab-env/micro_services/logger-ms/: Cargo.toml  logger-ms
lab-env/micro_services/logger-ms/src/: lib.rs  main.rs
lab-env/micro_services/logger-ms/src/collector/: syscalls.rs
lab-env/micro_services/logger-ms/src/models/: syscall.rs
lab-env/micro_services/logger-ms/src/redis_cl/: client.rs
lab-env/micro_services/logger-ms/src/tasks/: mod.rs  push_loop.rs
lab-env/micro_services/logger-ms/tests/: integration_test.rs
(+61 files in other folders)
