[package]
name = "logger-ms"
version = "0.1.0"
edition = "2024"

[dependencies]
get_if_addrs = "0.5.3"
ipnetwork = "0.21.1"
regex = "1.11.1"
redis = { version="0.29.4", features = ["cluster"] }
tokio = { version = "1.44.2", features = ["full"]}
serde = { version = "1.0.219", features = ["derive"]}
serde_json = "1.0.140"
chrono = "0.4.40"
futures = "0.3.31"
